--- a/src/App.css
+++ b/src/App.css
@@ -37,3 +37,25 @@ color: var(--mainWhite);
 .h5, h5 {
   font-size: 0.9rem !important;
 }
+
+.navbar {
+  justify-content: flex-start !important;
+}
+.btn-primary {
+  background: transparent;
+  text-transform: capitalize;
+  font-size: 0.8rem !important;
+  color: var(--mainBlack);
+  border-radius: 0 !important;
+  border: 0.1rem solid var(--mainDark) !important;
+}
+
+.btn-primary:hover {
+  background: var(--lightblue) !important;
+  color: var(--mainWhite) !important;
+}
+.cart-icon {
+  cursor: pointer;
+  font-size: 1.2rem;
+  color: var(--mainYellow);
+}
